force-app/main/default/objects/Contact/fields/AddressBook__c.field-meta.xml
<CustomField>
    <fullName>AddressBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AddressBook</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>People</relationshipLabel>
    <relationshipName>People</relationshipName>
    <type>Lookup</type>
</CustomField>