force-app/main/default/objects/Contact/fields/BVC_All_Contact__c.field-meta.xml
<CustomField>
    <fullName>BVC_All_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to indicate if the contact is for all functions</description>
    <label>All Contact</label>
    <type>Checkbox</type>
</CustomField>