force-app/main/default/objects/Contact/fields/BVC_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>BVC_Alternate_Email__c</fullName>
    <description>This is to capture alternate email id for the contact</description>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>