force-app/main/default/objects/Contact/fields/BVC_Contact_status__c.field-meta.xml
<CustomField>
    <fullName>BVC_Contact_status__c</fullName>
    <label>Contact status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive-Moved To Another Company</fullName>
            </value>
            <value>
                <fullName>Inactive-No Activity</fullName>
            </value>
            <value>
                <fullName>Active-DND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>