force-app/main/default/objects/Contact/fields/BVC_Finance_Contact__c.field-meta.xml
<CustomField>
    <fullName>BVC_Finance_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to indicate if the contact is for Finance</description>
    <label>Finance Contact</label>
    <type>Checkbox</type>
</CustomField>