force-app/main/default/objects/Contact/fields/BVC_Operations_Contact__c.field-meta.xml
<CustomField>
    <fullName>BVC_Operations_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to indicate if the contact is for Operations</description>
    <label>Operations Contact</label>
    <type>Checkbox</type>
</CustomField>