force-app/main/default/objects/Contact/fields/BVC_Sales_Contact__c.field-meta.xml
<CustomField>
    <fullName>BVC_Sales_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to indicate if the contact is for Sales</description>
    <label>Sales Contact</label>
    <type>Checkbox</type>
</CustomField>