force-app/main/default/objects/Contact/fields/CloudingoAgent__MAR__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__MAR__c</fullName>
    <label>Mailing Address Record Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>