force-app/main/default/objects/Contact/fields/CloudingoAgent__MAS__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__MAS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mailing Address Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>