force-app/main/default/objects/Contact/fields/CloudingoAgent__MAV__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__MAV__c</fullName>
    <label>Mailing Address Vacancy</label>
    <length>1</length>
    <type>Text</type>
</CustomField>