force-app/main/default/objects/Contact/fields/CloudingoAgent__MRDI__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__MRDI__c</fullName>
    <label>Mailing Residential Delivery Indicator</label>
    <length>12</length>
    <type>Text</type>
</CustomField>