force-app/main/default/objects/Contact/fields/CloudingoAgent__MTZ__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__MTZ__c</fullName>
    <label>Mailing Timezone</label>
    <length>48</length>
    <type>Text</type>
</CustomField>