force-app/main/default/objects/Contact/fields/CloudingoAgent__OAR__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__OAR__c</fullName>
    <label>Other Address Record Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>