force-app/main/default/objects/Contact/fields/CloudingoAgent__OAV__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__OAV__c</fullName>
    <label>Other Address Vacancy</label>
    <length>1</length>
    <type>Text</type>
</CustomField>