force-app/main/default/objects/Contact/fields/CloudingoAgent__ORDI__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__ORDI__c</fullName>
    <label>Other Residential Delivery Indicator</label>
    <length>12</length>
    <type>Text</type>
</CustomField>