force-app/main/default/objects/Contact/fields/CloudingoAgent__OTZ__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__OTZ__c</fullName>
    <label>Other Timezone</label>
    <length>48</length>
    <type>Text</type>
</CustomField>