force-app/main/default/objects/Contact/fields/gst_number__c.field-meta.xml
<CustomField>
    <fullName>gst_number__c</fullName>
    <label>gst number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>