force-app/main/default/objects/Contact/fields/Influencer_Pan__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Pan__c</fullName>
    <label>PAN Number of Entity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>