force-app/main/default/objects/Contact/fields/Name_As_Per_PAN__c.field-meta.xml
<CustomField>
    <fullName>Name_As_Per_PAN__c</fullName>
    <label>Name As Per PAN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>