force-app/main/default/objects/Contact/recordTypes/Contact_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Contact_Record_Type</fullName>
    <active>true</active>
    <label>Contact Record Type</label>
</RecordType>