force-app/main/default/objects/Contact/recordTypes/Quick_Contact_Creation.recordType-meta.xml
<RecordType>
    <fullName>Quick_Contact_Creation</fullName>
    <active>true</active>
    <label>Quick Contact Creation</label>
</RecordType>