force-app/main/default/objects/Contact/validationRules/Mandatory_Email_for_Finance_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Email_for_Finance_Role</fullName>
    <active>true</active>
    <description>Email field must not be blank for People with Finance Role</description>
    <errorConditionFormula>IF( BVC_Finance_Contact__c , TRUE, FALSE) &amp;&amp;  ISBLANK( Email )</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email cannot be left blank</errorMessage>
</ValidationRule>