force-app/main/default/objects/Contact/validationRules/Mobile_or_Email_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_or_Email_Mandatory</fullName>
    <active>true</active>
    <description>Either enter mobile or the email address</description>
    <errorConditionFormula>ISBLANK( MobilePhone ) &amp;&amp;  ISBLANK(  Email  )</errorConditionFormula>
    <errorMessage>Either enter the Mobile Number or the Email</errorMessage>
</ValidationRule>